--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </br>
         <input type="text" id="os">
         </br>
-        <label>22MCA13 / DSA</label>
+        <label>22MCA13 / DS</label>
         </br>
         <input type="text" id="ds">
         </br>
