u: Logical Code Fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             var ab = 4 * marks(b);
             var ac = 3 * marks(c);
             var ad = 3 * marks(d);
-            var ae = 5 * marks(e);
+            var ae = 4 * marks(e);
             var af = 1.5 * marks(f);
             var ag = 1.5 * marks(g);
             var ah = 2 * marks(h);
@@ -63,44 +63,44 @@
 
         <label>22MCA11 / MATH</label>
         <br>
-        <input type="text" id="math">
+        <input type="number" id="math">
         </br>
         <label>22MCA12 / OS</label>
         </br>
-        <input type="text" id="os">
+        <input type="number" id="os">
         </br>
         <label>22MCA13 / DS</label>
         </br>
-        <input type="text" id="ds">
+        <input type="number" id="ds">
         </br>
         <label>22MCA14 / CN</label>
         <br>
-        <input type="text" id="cn">
+        <input type="number" id="cn">
 
         </br>
         <label>22MCA15 / DAA</label>
         <br>
-        <input type="text" id="daa">
+        <input type="number" id="daa">
 
         </br>
         <label>22MCAL16 / DS Lab</label>
         <br>
-        <input type="text" id="dslab">
+        <input type="number" id="dslab">
         </br>
         <label>22MCAL17 / CN Lab</label>
         <br>
-        <input type="text" id="cnlab">
+        <input type="number" id="cnlab">
 
         </br>
         <label>22RMI18 / RMIPR</label>
         <br>
-        <input type="text" id="rmipr">
+        <input type="number" id="rmipr">
         <br>
 
         <input type="button" value="calculate" id="calc" onclick="calculate()"></input>
 
         <p style="color:red; font-size:large">Your CGPA/SGPA is</p>
-        <input type="text" id="res" disabled>
+        <input type="number" id="res" disabled>
 
         <footer>
             <p class="footer-heart">
