--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             var ag = 1.5 * marks(g);
             var ah = 2 * marks(h);
 
-            var z = ((aa + ab + ac + ad + ae + af + ag + ah) / 23).toFixed(2);
+            var z = ((aa + ab + ac + ad + ae + af + ag + ah) / 23);
 
-            document.getElementById("res").value = parseFloat(z);
+            document.getElementById("res").value = z.toString().match(/^-?\d+(?:\.\d{0,2})?/)[0];
         }
 
         function marks(y) {
