u: Minor Typo Fix

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <input type="button" value="calculate" id="calc" onclick="calculate()"></input>
 
-        <p style="color:red; font-size:large">Your CGPA/SGPA is</p>
+        <p style="color:red; font-size:large">Your SGPA is</p>
         <input type="number" id="res" disabled>
 
         <footer>
