--- a/index.html
+++ b/index.html
@@ -9,19 +9,27 @@
 
 <body id="bd">
     <center>
-        <b id="h">Calculate Your SGPA</b>
+
+        <h1 style="color: white;">CMR Institute of Technology, Bengaluru</h1>
+
+        <div id="image-container">
+            <img src="cmrit.jpg" alt="CMR Institute of Technology" />
+        </div>
+
+        <br>
+        <b id="h">MCA 2023 SGPA CALCULATOR</b>
         <br>
         <br>
 
         <a href="semester-one.html">
-            <button id="calc">Sem 1</button>
+            <button>Semester 1</button>
         </a>
 
         <a href="semester-two.html">
-            <button id="calc">Sem 2</button>
+            <button>Semester 2</button>
         </a>
 
-        <footer>
+        <footer id="footer">
             <p class="footer-heart">
                 Made with <g-emoji class="g-emoji" alias="heart"
                     fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">
@@ -31,15 +39,6 @@
             </p>
         </footer>
     </center>
-
-    <script>
-        // Add a click listener to the "Sem 2" button
-        document.getElementById("sem2Button").addEventListener("click", function () {
-            // Perform an action when the button is clicked
-            alert("Sem 2 button clicked!");
-            // You can add code to navigate to the "semester2.html" page or perform other actions here.
-        });
-    </script>
 </body>
 
 </html>
