--- a/semester-one.html
+++ b/semester-one.html
@@ -57,7 +57,7 @@
 <center>
 
     <body id="bd">
-        <b id="h">MCA 2023 SGPA CALCULATOR</b>
+        <b id="h">Calculate Your SGPA</b>
         <br>
         <br>
 
