--- a/semester-two.html
+++ b/semester-two.html
@@ -59,7 +59,7 @@
 <center>
 
     <body id="bd">
-        <b id="h">MCA 2023 SGPA CALCULATOR</b>
+        <b id="h">Calculate Your SGPA</b>
         <br>
         <br>
 
@@ -97,8 +97,6 @@
         <label>22MCAL27 / DBMS Lab</label>
         <br>
         <input type="number" id="dbmslab">
-        <br>
-
         </br>
         <label>22MCAL28 / Java Lab</label>
         <br>
