--- a/semester-one.html
+++ b/semester-one.html
@@ -97,7 +97,7 @@
         <input type="number" id="rmipr">
         <br>
 
-        <input type="button" value="calculate" id="calc" onclick="calculate()"></input>
+        <input type="button" value="Calculate" id="calc" onclick="calculate()"></input>
 
         <p style="color:red; font-size:large">Your SGPA is</p>
         <input type="number" id="res" disabled>
